try to solve white space problem

--- a/src/components/contectPage/ContectPage.css
+++ b/src/components/contectPage/ContectPage.css
@@ -1,7 +1,7 @@
 .contectPage{
     padding: 34px;
     height: 90vh;
-    width: calc(100vw-34px);
+    width: 100vw;
 }
 
 .contectLogo{
