--- a/src/components/services/Services/Services.css
+++ b/src/components/services/Services/Services.css
@@ -1,6 +1,5 @@
 .servicesPage{
     padding: 10px;
-    
     height: 90vh;
-    width: calc(100vw-10px);
+    width: 100vw;
 }
